<resources>
    <string name="app_name">GradeTracker</string>
    <string name="logged_in">LOGGED_IN</string>
    <string name="login_sign_in">Please Sign in.</string>
    <string name="view_grades">View Grades</string>
    <string name="track_assignment_status">Track Assignment Status</string>
    <string name="notification">Notification</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_student">Hello Student!</string>
    <string name="hello_teacher">Hello Teacher!</string>
    <string name="manage_assignment">Manage Assignment</string>
    <string name="grade_submission">Grade Submission</string>
    <string name="class_performance">Class Performance</string>
    <string name="notify_students">Notify Students</string>
    <string name="create_account_here">Create Account Here</string>
    <string name="create_account">Create Account</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="access_code">Access Code</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="welcome_message">Welcome to the GradeTracker.\nAre you a...</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="enter_due_date">Enter due date</string>
    <string name="enter_description">Enter description</string>
    <string name="title">Title</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="student_id">Student ID</string>
    <string name="grade">Grade</string>
    <string name="enter_grade">Enter grade</string>
    <string name="enter_student_id">Enter student ID</string>
    <string name="post_grade">Post Grade</string>
    <string name="back">Back</string>
    <string name="log_out">Log Out</string>
</resources>