<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/assignmentDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="350dp"
        android:layout_marginTop="16dip"
        android:padding="8dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignmentDisplayTextView" />

    <EditText
        android:id="@+id/titleInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleLabelTextView"
        app:layout_constraintStart_toEndOf="@id/titleLabelTextView" />

    <TextView
        android:id="@+id/descriptionLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dip"
        android:layout_marginTop="8dp"
        android:text="@string/student_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInputEditText" />

    <EditText
        android:id="@+id/descriptionInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_student_id"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/descriptionLabelTextView"
        app:layout_constraintStart_toEndOf="@id/descriptionLabelTextView" />

    <TextView
        android:id="@+id/dueDateLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dip"
        android:layout_marginTop="8dp"
        android:text="@string/grade"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInputEditText" />

    <EditText
        android:id="@+id/dueDateInputEditText"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_grade"
        android:inputType="datetime"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dueDateLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/dueDateLabelTextView" />

    <Button
        android:id="@+id/logButton"
        android:layout_width="390dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:text="@string/post_grade"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDateLabelTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>