<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleHelloStudentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello Student!" />

    <Button
        android:id="@+id/titleHelloStudentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_grades" />

    <Button
        android:id="@+id/titleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_assignment_status" />

    <Button
        android:id="@+id/titleLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification" />

</androidx.constraintlayout.widget.ConstraintLayout>